# rasberry_perception

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt  setup.py
config/: bbc_detectors.yaml  detection.rviz  detectors.yaml  rviz.rviz  sequence_0.rviz
description/: linear_3dof_arm.urdf.xacro
description/d435/: _d435.urdf.xacro
docker/: docker-compose.yml  install_docker.sh  run_backend.sh
docker/base/: .dockerignore
docker/base_gpu/: Dockerfile  entry_point.sh  entrypoint.sh
docker/base_jetson/: Dockerfile
docker/detectron2/: Dockerfile  entrypoint.sh  start_backend.sh
docker/detectron2_jetson/: Dockerfile  docker-compose.yml  start_backend.sh
docker/fruitcast/: Dockerfile  start_backend.sh
docker/gpu/: Dockerfile  entrypoint.sh
docker/gpu/detectron2/: Dockerfile  start_backend.sh
docker/gpu/fruitcast/: Dockerfile  start_backend.sh
docker/gpu/tensorrtdeepsort/: Dockerfile  start_backend.sh  tensorrtdeepsort.json
docker/gpu/unet/: Dockerfile  start_backend.sh
docker/gpu/yolov4deepsort/: Dockerfile  start_backend.sh
docker/jetson/: Dockerfile
docker/jetson/detectron2/: Dockerfile  mask_rcnn_R_50_FPN_3x.yaml
docker/jetson/tensorrtdeepsort/: Dockerfile  start_backend.sh
docker/mmdetection/: Dockerfile  get_mmdetection.sh
docker/saga_base_gpu/: Dockerfile  entrypoint.sh
docker/unet/: Dockerfile  start_backend.sh
docker/yolov4deepsort/: Dockerfile
docs/: interfaces.md
grasberry_manipulation/: CMakeLists.txt  README.md  package.xml  setup.py
grasberry_manipulation/description/: linear_3dof_arm.urdf.xacro
grasberry_manipulation/description/meshes/: gripper_example.dae
grasberry_manipulation/launch/: linear_3dof.launch  linear_3dof_arm.launch  linear_3dof_cameras.launch
grasberry_manipulation/scripts/: detection_control.py  interactive_control.py  interactive_control_cli.py
grasberry_manipulation/scripts/examples/: open_close_gripper.py  square_arm_movement.py
grasberry_manipulation/src/arm_3dof/: arm_controller.py  canopen_scara.cpp  canopen_singlearm.cpp  control.py  gripper_controller.py  tf_updater.py
grasberry_manipulation/src/linear_3dof_arm/: arm_controller.py  canopen_scara.cpp  control.py  gripper_controller.py  install_arm_rules.sh
grasberry_manipulation/src/linear_3dof_arm/rules/: 79-usb2gripper.rules
include/rasberry_perception/tracking/: asso_exception.hpp  simple_tracking.hpp  tracking.hpp
launch/: 2D_detector.launch  camera_publisher.launch  detector.launch  detector_client.launch  detector_server.launch  gripper.launch  linear_3dof.launch  linear_3dof_arm.launch  linear_3dof_cameras.launch  tracker.launch
msg/: BoundingBox3D.msg  Detection.msg  DetectionInfo.msg  DetectionStatus.msg  Detections.msg  GripperCam.msg  HarvestDetections.msg  ImageDetections.msg  LabelledImage.msg  ObjectAnnotation.msg  ObjectDescription.msg  ObjectDetection.msg  ObjectSize.msg  RegionOfInterest.msg  SegmentOfInterest.msg  SegmentationLabel.msg  ServiceStatus.msg  TaggedPose.msg  TaggedPoseArray.msg  TaggedPoseStampedArray.msg  TrackDetection.msg  TrackerResults.msg
rasberry_perception/: LICENSE  README.md  package.xml  setup.py
rasberry_perception/config/: rviz.rviz
rasberry_perception/description/d435/: test_d435_camera.urdf.xacro
rasberry_perception/docker/base/: Dockerfile
rasberry_perception/launch/: bbc_camera.launch
rasberry_perception/msg/: BoundingBox.msg  SegmentationLabel.msg  SegmentationLabel3D.msg
rasberry_perception/scripts/examples/: camera_reconfigure.py
rasberry_perception/src/bbc_countryfile/: bbc_detector.py
rasberry_perception/src/deep_learning_ros/: get_detections_for_topic.py
rasberry_perception/src/detector_2d/: detector_2d.py
rasberry_perception/src/rasberry_perception_pkg/: detection.py
scripts/: detection_control.py  interactive_control.py  interactive_control_cli.py  run_backend.sh
scripts/docker_backends/: run_mmdetection.sh
src/bbc_countryfile/: bbc_count_announcer.py  models.py  trackers.py
src/deep_learning_ros/: get_detections_for_topic.py  run_model.py
src/deep_learning_ros/compatibility_layer/: detection_server.py  registry.py
src/linear_3dof_arm/: arm_controller.py  canopen_singlearm.cpp  control.py  gripper_controller.py  install_arm_rules.sh  tf_updater.py
src/linear_3dof_arm/rules/: 79-usb2can-rw.rules  79-usb2can.rules
src/rasberry_perception/: __init__.py  basic_detector.py  compat.py  detection_client.py  detection_server.py  service.py  utility.py  visualisation.py
src/rasberry_perception/detection/: __init__.py  catalog.py  compat.py  detection_client.py  detection_server.py  get_detections_for_topic.py  service.py  utility.py  visualisation.py
src/rasberry_perception/detection/interfaces/: __init__.py  compat.py  default.py  detectron2.py  gazebo_berries.py  mmdetection.py  registry.py
src/rasberry_perception/detection_interface/compatibility_layer/: catalog.py  detection_server.py  python3_fixes.py  registry.py
src/rasberry_perception/detection_tracking/: tracking_from_detections.py
src/rasberry_perception/interfaces/: __init__.py  default.py  detectron2.py  fruitcast.py  gazebo_berries.py  mmot.py  tensorrtdeepsort.py  unet.py  yolov4deepsort.py
src/rasberry_perception/tracking/: count_unique_tracks.py  log_tracks.py  tracking.cpp  tracking_from_detections.py
src/rasberry_perception/tracking/config/: default.yaml
src/rasberry_perception_pkg/: visualisation.py
src/test_data/: sequence_0_publisher.py
src/tracking/: tracking_from_detections.py
srv/: ArmControllerService.srv  GetDetectorResults.srv  OpenCloseGripper.srv
