<?xml version="1.0"?>
<!--
  ~ Raymond Kirk (Tunstill) Copyright (c) 2020
  ~ Email: ray.tunstill@gmail.com
  -->

<package format="2">
  <name>rasberry_perception</name>
  <version>0.0.0</version>
  <description>The rasberry_perception package</description>

  <maintainer email="ray.tunstill@gmail.com">Raymond</maintainer>

  <license>MIT (see LICENSE in project root)</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>realsense2_camera</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>rosserial</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>realsense2_camera</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>
  <build_export_depend>rosserial</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>realsense2_camera</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>dynamic_reconfigure</exec_depend>
  <exec_depend>rosserial</exec_depend>
</package>