<?xml version="1.0"?>
<!--
  ~ Raymond Kirk (Tunstill) Copyright (c) 2020
  ~ Email: ray.tunstill@gmail.com
  -->

<package format="2">
  <name>rasberry_perception</name>
  <version>0.0.1</version>
  <description>The rasberry_perception package</description>

  <maintainer email="ray.tunstill@gmail.com">Raymond</maintainer>

  <license>see LICENSE in project root</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>ros_numpy</build_depend>
  <build_depend>bayes_tracking</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>visualization_msgs</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>ros_numpy</build_export_depend>
  <build_export_depend>bayes_tracking</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros_numpy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>bayes_tracking</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
</package>